# qBreakpad

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
cmake/: qBreakpadConfig.cmake.in  qBreakpadFetchConfig.cmake.in
demo/: CMakeLists.txt
demo/program/: CMakeLists.txt
demo/reporter/: CMakeLists.txt
handler/: CMakeLists.txt
tests/: CMakeLists.txt
tests/duplicates/: CMakeLists.txt
tests/testsRunner/: CMakeLists.txt
